apps/web/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  # replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: data
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/ephemeral/archmirror/data"
            server: 10.10.20.10
      containers:
        - name: web
          image: npastorale/web:0.0.1@sha256:0c92ba6f2258b31cb28ce10803bcafd9ed18800eab75ae227957328fb11f67b7
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
