apps/web/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-https
spec:
  hostnames:
    - nahue.ar
    - www.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: web
      namespace: web
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: web
      namespace: web
      sectionName: www-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: web
          port: 8080
          weight: 1
