apps/web/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Content-Security-Policy: script-src 'self' https://plausible.nahue.ar";
      sub_filter '</head>' '<script defer data-domain="nahue.ar" src="https://plausible.nahue.ar/js/script.js"></script></head>';
      sub_filter_once off;
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - www.nahue.ar
        - nahue.ar
      secretName: web
  rules:
    - host: nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
